# rm_auto_aim

./: .clang-format  .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
Camera/Data/: 041052620793.mvdat  042003320465.mvdat
armor_auto_aim/: README.md
armor_auto_aim/armor_detector/: CMakeLists.txt  README.md  package.xml
armor_auto_aim/armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
armor_auto_aim/armor_detector/src/: LifecycleNode.cpp  detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
armor_auto_aim/armor_detector/test/: detector_test.cpp
armor_auto_aim/armor_shooter/: CMakeLists.txt  package.xml
armor_auto_aim/armor_shooter/include/armor_shooter/: shooter.hpp  shooter_node.hpp
armor_auto_aim/armor_shooter/src/: LifecycleNode.cpp  shooter.cpp  shooter_node.cpp
armor_auto_aim/armor_tracker/: CMakeLists.txt  package.xml
armor_auto_aim/armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp  tracker.hpp  tracker_node.hpp
armor_auto_aim/armor_tracker/src/: LifecycleNode.cpp  armor_choose.cpp  extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
auto_aim/: CMakeLists.txt  package.xml
auto_aim/config/: config.yaml  mindvision.config
auto_aim/include/auto_aim/: tf2_node.hpp
auto_aim/launch/: absolute.launch.py  armor.launch.py  launch.py
auto_aim/src/: auto_aim.cpp  tf2_node.cpp
auto_aim_interfaces/: CMakeLists.txt  package.xml
auto_aim_interfaces/msg/: Armors.msg  DebugArmor.msg  DebugRune.msg  Image.msg  Rune.msg  RuneTarget.msg  SerialInfo.msg  Target.msg  TrackerInfo.msg
demo/: CMakeLists.txt  package.xml
demo/src/: demo.cpp
lifecycle_interfaces/: CMakeLists.txt  package.xml
lifecycle_interfaces/srv/: ChangeState.srv
record/: draw.py  omega.txt  omegatime.txt
rune_auto_aim/: README.md
rune_auto_aim/rune_detector/: CMakeLists.txt  package.xml
rune_auto_aim/rune_detector/include/rune_detector/: LifecycleNode.hpp  detector.hpp  detector_node.hpp  nn.h  pnp_solver.hpp  rune.hpp  rune_type.hpp  sizes.hpp  usings.hpp
rune_auto_aim/rune_detector/src/: LifecycleNode.cpp  detector.cpp  detector_node.cpp  nn.cpp  pnp_solver.cpp  rune.cpp
rune_auto_aim/rune_shooter/: CMakeLists.txt  package.xml
rune_auto_aim/rune_shooter/include/rune_shooter/: armor_type.hpp  bullet.hpp  lead.hpp  rune_shooter.hpp  shooter.hpp  shooter_node.hpp
rune_auto_aim/rune_shooter/src/: LifecycleNode.cpp  coordinate.cpp  rune_shooter.cpp  shooter.cpp  shooter_node.cpp
rune_auto_aim/rune_tracker/: CMakeLists.txt  package.xml
rune_auto_aim/rune_tracker/include/rune_tracker/: LifecycleNode.hpp  armor_type.hpp  concepts.hpp  containers.hpp  coordinate.h  duration.h  formats.hpp  pnp_solver.hpp  point.hpp  ring_buffer.hpp  ring_buffer_statistic.hpp  sizes.hpp  statistic.hpp  timestamp.h  tracker.hpp  tracker_node.hpp  ukf_plus.h
rune_auto_aim/rune_tracker/src/: LifecycleNode.cpp  coordinate.cpp  duration.cpp  pnp_solver.cpp  timestamp.cpp  tracker.cpp  tracker_node.cpp  ukf_plus.cpp
scripts/: armor.run.bash  debug.bash  run.bash  setup.bash
scripts/shell/: openvino.bash  setup.bash
sensor/camera/: CMakeLists.txt  package.xml
sensor/camera/include/camera/: camera4calibrate.hpp  camera_node.hpp  common.hpp  inner_shot.hpp  mindvision.hpp  subscriber_test_node.hpp
sensor/camera/src/: camera4calibrate.cpp  camera_node.cpp  camera_test.cpp  inner_shot.cpp  mindvision.cpp  sub_image_test_node.cpp  subscriber_test_node.cpp
sensor/camera/test/: camera_test.cpp
sensor/camerainfo/: CMakeLists.txt  package.xml
sensor/camerainfo/include/camerainfo/: camera_info.hpp
sensor/camerainfo/src/: camera_info.cpp
sensor/serial/: CMakeLists.txt  package.xml  serial_launch.py
sensor/serial/include/serial/: packet.hpp  serial.hpp  serial_for_unity.hpp  serial_node.hpp
sensor/serial/launch/: launch.py
sensor/serial/src/: lifecyclenodecontrol.cpp  serial.cpp  serial_for_unity.cpp  serial_node.cpp
shooter/: package.xml
shooter/armor_shooter/: CMakeLists.txt  package.xml
shooter/include/shooter/: shooter.hpp  shooter_node.hpp
shooter/rune_shooter/include/rune_shooter/: lead.hpp  rune_shooter.hpp
shooter/src/: shooter.cpp  shooter_node.cpp
tools/: calibrate.py  mindvision.py
