<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor_shooter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2534732180@qq.com">pantao</maintainer>
  <license>TODO: License declaration</license>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- depend: build, export, and execution dependency -->
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>auto_aim_interfaces</depend>
    <depend>eigen</depend>
    <depend>communicate</depend>
    <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
